# RoboAssay

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: consistency.md  groundedness.md  index.md  installation.md  instruction_following.md  persona.md  quickstart.md  regression.md  relevance.md  safety.md
docs/examples/: multi-turn.md
docs/keywords/: consistency.md  groundedness.md  instruction-following.md  persona.md  regression.md  relevance.md  safety.md
examples/: groundedness.robot  multi_turn.robot  relevance.robot  safety.robot
examples/multi-turn/: index.html
installation/: index.html
keywords/consistency/: index.html
keywords/groundedness/: index.html
keywords/instruction-following/: index.html
keywords/persona/: index.html
keywords/regression/: index.html
keywords/relevance/: index.html
keywords/safety/: index.html
quickstart/: index.html
search/: search_index.json
src/RoboAssay/: __init__.py  consistency.py  groundedness.py  instruction_following.py  persona.py  regression.py  relevance.py  safety.py
src/RoboAssay/utils/: conversation.py  judge.py  roboassay_logger.py
tests/: test_consistency.py  test_conversation.py  test_groundedness.py  test_instruction_following.py  test_judge.py  test_persona.py  test_regression.py  test_relevance.py  test_safety.py
